<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:padding="0dp"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <TextView
        android:textStyle="bold"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/photo_blog"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/colorWhite"
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhiteTrans"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/colorWhite"
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorWhiteTrans" />

        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/loginbtn"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/creatbtn"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        android:text="@string/create_account"
        android:background="@color/colorWhite"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:padding="0dp"
        android:layout_marginTop="0dp"
        android:indeterminate="true"
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
         />


</RelativeLayout>